Made project run on laptop